test/mutation_analysis/s0342_power_of_four/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0342_power_of_four/hafis/starchat/mutants/2/Solution.java:21: error: unreachable statement
        return n == 1;
        ^
1 error
